Dev: fix for layout shifting with browser search bar

--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,7 @@ a#contact-nav-btn {
 }
 .hero-section {
   height: 100vh;
+  height: 100svh;
   position: relative;
   display: flex;
   align-items: center;
@@ -355,6 +356,7 @@ a#contact-nav-btn {
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
+  height: 100svh;
   position: absolute;
   top: 0;
   left: 0;
